추가: gitignore에 .cache폴더 추가, 플레이어 발소리 추가

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ Layouts/
 **/FMOD/.user
 **/[Aa]ssets/StreamingAssets//.bank
 **/[Aa]ssets/StreamingAssets//.bank.meta
+FMOD_NPCProject/.cache/
 
 # Log-files
 fmod.log
